ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-09-11 Daniel Andreca
	- ENGINE:
		* Fixed #1080: Active web folders should not be deletable by customer
		* Fixed #1554: MySQL quota calculation (thanks Feg)

2008-09-10 Daniel Andreca
	- LANGUAGES:
		* Updated Hungarian (thanks Attila Fulop)
		* Updated Dutch (thanks mata)

2008-09-05 Daniel Andreca
	- LANGUAGES:
		* Fixed #1552: Updated Czech

2008-09-04 Daniel Andreca
	- ENGINE:
		* Fixed #1229: On domain creation groupadd / useradd fails when pre-existent accounts are found leaving the domain in error state

2008-09-30 Daniel Andreca
	- TOOLS:
		* Updated: PHPmyAdmin to 2.11.9.2
	- ENGINE:
		* Fixed #1479: Use cmp instead of diff (at least for the logs) (thanks aseques)
	- LANGUAGES:
		* Updated German (thanks Haeber)

2008-09-24 Daniel Andreca
	- GUI:
		* Fixed #1544: Add SQL user has only one option -> useless
		* Fixed #1545: HTML bug with hint for updates
		* Fixed #1546: Tiny english typo
	- CONFIGS:
		* Enable quota on proftpd

2008-09-23 Daniel Andreca
	- GUI:
		* Fixed #1544: Add SQL database has only one option -> useless
		* Fixed #1543: client/webtools.php makes some gui trouble
	- CONFIGS:
		* Enable quota on proftpd for debian lenny

2008-09-21 Daniel Andreca
	- GUI:
		* Fixed #1538: Not possible to add a domain alias with an already existing mountpoint

2008-09-20 Daniel Andreca
	- CONFIGS:
		* logrotate/ispcp fails if rsyslog is used

2008-09-16 Benedikt Heintel
	- TOOLS:
		* Updated: PHPmyAdmin to 2.11.9.1

2008-09-15 Daniel Andreca
	- GUI:
		* Fixed #1396: Wordwrap in ticket system (admin / client)
		* Fixed #1506: Email edit link inconsistent with other pages
	- ENGINE:
		* Fixed #1534: Setup script fails if the same username is always used

2008-09-14 Daniel Andreca
	- GUI:
		* Encrypt email password in database
		* Encrypt sql password in database
		* Fixed #1535: Wrong error text in user Email creation
		* Fixed #1396: Wordwrap in ticket system (reseler)