@@ -17,7 +17,7 @@ $ORIGIN {DMN_NAME}.
 www             IN              A               {DMN_IP}
 {DMN_NAME}.     IN              TXT             "v=spf1 a mx ip4:{DMN_IP} ~all"
 localhost       IN              A               127.0.0.1
-mail            IN              A               {BASE_SERVER_IP}
+mail            IN              A               {DMN_IP}
 ns1             IN              A               {BASE_SERVER_IP}
 ns2             IN              A               {SECONDARY_DNS_IP}
 ; CNAME for mail transfer
