@@ -92,11 +92,6 @@ AuthPAM				off
   HideNoAccess             on
 </Directory>
 
-# But not to overwrite ispCP Standard directories.
-<Directory ~/>
-  PathDenyFilter "^/(backups|cgi-bin|htdocs|errors|logs|phptmp|statistics)/?$"
-</Directory>
-
 <Limit ALL>
   IgnoreHidden             on
 </Limit>
